# turing

./: .gitattributes  .gitignore  AGENTS.md  BLOCKED.md  BOOT.md  CLAUDE.md  Cargo.toml  LESSONS.md  MILESTONE_REPORT.md  PROGRESS.md  README.md  conftest.py  pyproject.toml  routing_decision.json  task-spec.json
.claude/agent-memory/: full_swe_bench_loop_reflection.md
.github/workflows/: ci.yml  final-certification.yml
contracts/: 00_README.md  INTERFACES.md  append_envelope.md  approval_card.md  capsule.schema.json  codec_policy.md  event_registry.json  event_registry.md  predicate_set.md  receipt.schema.json  refs.md
crates/turing-approval/: Cargo.toml
crates/turing-approval/src/: lib.rs
crates/turing-approval/tests/: approval_card.rs
crates/turing-cli/: Cargo.toml
crates/turing-cli/src/: main.rs
crates/turing-cli/tests/: cli_gates.rs  install_gates.rs
crates/turing-contracts/: Cargo.toml
crates/turing-contracts/src/: envelope.rs  failure.rs  goal.rs  identity.rs  jcs.rs  lib.rs  payload.rs  registry.rs
crates/turing-contracts/tests/: canonical_vectors.rs  goal_state.rs  identity_profile.rs
crates/turing-daemons/: Cargo.toml
crates/turing-daemons/src/: lib.rs
crates/turing-daemons/tests/: daemon_role_rpc.rs  daemon_topology.rs  turingd_rpc.rs
crates/turing-economy/: Cargo.toml
crates/turing-evidence/: Cargo.toml
crates/turing-execd/: Cargo.toml
crates/turing-execd/src/: lib.rs
crates/turing-execd/tests/: capability_grant.rs  fake_manual_workers.rs  grok_headless_worker.rs  macro_anchor.rs  process_group.rs  worker_profile.rs  worktree.rs
crates/turing-failure/: Cargo.toml
crates/turing-git-tape/: Cargo.toml
crates/turing-git-tape/src/: append.rs  git.rs  head_set.rs  lib.rs
crates/turing-git-tape/tests/: append_success.rs  authority_epoch.rs  git_sha256.rs  head_set_snapshot.rs  stale_writer.rs
crates/turing-integration/: Cargo.toml
crates/turing-kernel/: Cargo.toml
crates/turing-kernel/src/: admission.rs  failure.rs  lib.rs  reducer.rs
crates/turing-kernel/tests/: accepted_head.rs  authorization_head.rs  failure_append.rs  head_effect_tamper.rs
crates/turing-loop/: Cargo.toml
crates/turing-loop/src/: lib.rs
crates/turing-loop/tests/: capsule.rs  rtool.rs  tick.rs
crates/turing-pput/: Cargo.toml
crates/turing-predicate/: Cargo.toml
crates/turing-projection/: Cargo.toml
crates/turing-projection/src/: lib.rs
crates/turing-projection/tests/: projection_builder.rs
crates/turing-qualification/: Cargo.toml
crates/turing-qualification/src/: lib.rs
crates/turing-qualification/tests/: agent_economy_e2e.rs  handoff_contract.rs
crates/turing-replay/: Cargo.toml
crates/turing-replay/src/: lib.rs
crates/turing-replay/tests/: replay_determinism.rs
demo/: demo_agent_economy_e2e.sh  demo_rescue_agent_economy.sh
docs/adr/: ADR-0001-two-refs.md  ADR-0002-append-envelope.md  ADR-0003-event-registry.md  ADR-0004-predicate-set.md  ADR-0005-capsule-receipt-schemas.md  ADR-0006-codec-policy.md  ADR-0007-approvalcard-signing.md  ADR-0008-worker-cli-invocation.md  ADR-AMM-CTF-MarketRouter.md  ADR-Agent-Economy-as-Organization.md  ADR-No-PASS-No-HALT-Audit-Loop.md  ADR-P0-Daemon-Socket-Trust-Model.md  ADR-PPUT-North-Star.md  ADR-Price-Not-Truth.md  ADR-WORKER-001-worker-role.md
docs/bench/: MINI_SWE_BENCH_GROK_HEADLESS.md
docs/handoff/: AGENT_ECONOMY_RUNTIME_HANDOFF.md  EXTERNAL_AUDITOR_PROMPT_FULL_SWE_BENCH_READINESS.md  EXTERNAL_AUDITOR_PROMPT_STAGE12_TO_STAGE16.md  FULL_SWE_BENCH_READY_LOOP_ENGINEERING_PLAN.md  STAGE12_TO_STAGE16_LOOP_ENGINEERING_EXECUTION_PLAN.md  STAGE12_TO_STAGE16_LOOP_ENGINEERING_PLAN_INDEPENDENT_AUDIT.md  STAGE12_TO_STAGE16_PLAN_INDEPENDENT_AUDIT.md  STAGE12_TO_STAGE16_RECURSIVE_AUDIT_PLAN.md  STAGE9_TO_STAGE14_PLAN_INDEPENDENT_AUDIT.md  STAGE9_TO_STAGE14_SWE_BENCH_PLAN.md  TURINGOS_PROJECT_RETROSPECTIVE_AND_EXTERNAL_AUDIT_PROMPT_20260702.md
docs/project_books/: TURINGOS_AGENT_ECONOMY_RUNTIME_GREENFIELD_v1_0.md
evidence/foundation/: MANIFEST.sha256  SHIPGATE_FOUNDATION.md  kernel_smoke_result.json  unittest_result.txt
evidence/g12/: adversary_union_run.json  claude_final_ratification_packet.json  evidence_bundle.json  goal_run_handoff.json  grok_verification_report.json  human_decision_ledger.json  local_gate_summary.json  pack_disposition.json  phase_capsule.json  required_adversaries.union.v1.json
evidence/stage0/: MANIFEST.sha256  SHIPGATE_0.md  s1_result.json  s1_spike.py  s2_result.json  s2_spike.py
evidence/stage1/: MANIFEST.sha256  SHIPGATE_1.md  loop_e2e_result.json  unittest_result.txt
evidence/stage2/: MANIFEST.sha256  SHIPGATE_2.md  s5_github.py  s5_github_result.json  s6_cli_probe.py  s6_gate.py  s6_gate_result.json  s6_probe_result.json
plans/: PL-20260629-swebench-verified-500-campaign.md
schemas/: FinalRatificationPacket.v1.schema.json  GateResult.v1.schema.json  GoalRunHandoff.v1.schema.json  GrokVerificationReport.v1.schema.json
scripts/: install-local.sh
state/: progress.json  task_spec.md
tests/: test_boot.py  test_capsule.py  test_cli.py  test_codec.py  test_dispatch_router.py  test_envelope.py  test_environment_contract.py  test_evidence.py  test_explore.py  test_full_swe_bench_readiness.py  test_headless_contract.py  test_loop.py  test_macro.py  test_micro_tape_decision_dag_audit.py  test_mini_swe_bench_grok_headless.py  test_official_harness_qualification.py  test_panorama.py  test_phase_f_evaluator_proof.py  test_phase_f_repair_loop.py  test_planner.py  test_predicate.py  test_reduce.py  test_registry.py  test_replay.py  test_schemas.py  test_signing.py  test_smoke_bootstrap.py  test_stage10_failure_taxonomy.py  test_stage11_loop_until_pass.py  test_stage12_contract.py  test_stage12_release_audit.py  test_stage12_run_plan.py  test_stage12_test_local_authority.py  test_stage13_native_api_hardening.py  test_stage14_corpus_failure_memory.py  test_stage15_market_router.py  test_stage16_sealed_campaign.py  test_stage16r_unsolved_repair.py  test_stage8_no_hitl_loop_audits.py  test_stage9_native_api_worker.py  (+11 more)
tools/: goal_handoff.py  try_atom.py
(+1524 files in other folders)
