[package]
name = "turing-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "turing"
path = "src/main.rs"

[dependencies]
turing-qualification = { path = "../turing-qualification" }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
