[package]
name = "turing-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "turing"
path = "src/main.rs"

[dependencies]
serde_json = { version = "=1.0.150", features = ["preserve_order"] }
turing-qualification = { path = "../turing-qualification" }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
