[package]
name = "turing-daemons"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "turingd"
path = "src/bin/turingd.rs"

[[bin]]
name = "turing-execd"
path = "src/bin/turing-execd.rs"

[[bin]]
name = "turing-mcp"
path = "src/bin/turing-mcp.rs"

[[bin]]
name = "turing-marketd"
path = "src/bin/turing-marketd.rs"

[[bin]]
name = "turing-pputd"
path = "src/bin/turing-pputd.rs"

[[bin]]
name = "turing-viewd"
path = "src/bin/turing-viewd.rs"

[dependencies]
serde_json = { version = "=1.0.150", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
