[package]
name = "turing-projection"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
turing-contracts = { path = "../turing-contracts" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order"] }

[lints]
workspace = true
